NILM: Edit docstring for confidence_estimator, and fix plyint errors.

--- a/.pylintrc
+++ b/.pylintrc
@@ -130,7 +130,7 @@ expected-line-ending-format=
 bad-functions=map,filter,input
 
 # Good variable names which should always be accepted, separated by a comma
-good-names=i,j,k,t,ex,Run,_
+good-names=d,i,j,k,t,ex,Run,_
 
 # Bad variable names which should always be refused, separated by a comma
 bad-names=foo,bar,baz,toto,tutu,tata
